--- a/jsposition.html
+++ b/jsposition.html
@@ -8,7 +8,7 @@
 <body>
 
     <p style="width: 500px;"
-    onclick="this.style.marginLeft='800px'; this.style.width='10px'" >
+    onclick="this.style.margin='auto'; this.style.width='10px'" >
     
     >Intellectum est enim mihi quidem in multis, et maxime in me ipso, sed paulo ante in omnibus, cum M. Marcellum senatui reique publicae concessisti, commemoratis praesertim offensionibus, te auctoritatem huius ordinis dignitatemque rei publicae tuis vel doloribus vel suspicionibus anteferre. Ille quidem fructum omnis ante actae vitae hodierno die maximum cepit, cum summo consensu senatus, tum iudicio tuo gravissimo et maximo. Ex quo profecto intellegis quanta in dato beneficio sit laus, cum in accepto sit tanta gloria.
 
