--- a/jsObjet1.html
+++ b/jsObjet1.html
@@ -25,7 +25,7 @@
     function Init() {
         test = {
             affiche: function() {
-                let saisie = parseInt(document.getElementById("champSaisie").value);
+                let saisie = parseFloat(document.getElementById("champSaisie").value);
                 alert(saisie + 4);
             }
         }
